2017-03-25  Robby Stephenson  <robby@periapsis.org>

	* Updated Douban data source to API v2 (from XML to JSON).

2017-03-24  Robby Stephenson  <robby@periapsis.org>

	* Fixed bug with image location for reports, introduced in v3.0.1 (Bug 377790).

2017-03-16  Robby Stephenson  <robby@periapsis.org>

	* Updated the IBS.it data source (Bug 373774).

2017-03-11  Robby Stephenson  <robby@periapsis.org>

	* Added data source for DataPoisk.ru.

2017-03-04  Robby Stephenson  <robby@periapsis.org>

	* Added data source for OMDBAPI.com.

2017-02-20  Robby Stephenson  <robby@periapsis.org>

	* Released Tellico 3.0.1.

2017-02-12  Robby Stephenson  <robby@periapsis.org>

	* Removed Microsoft Academic Search data source (defunct).
	* Updated DBLP data source.

2017-02-08  Robby Stephenson  <robby@periapsis.org>

	* Fixed relative file locations in HTML export (Bug 376134).

2017-02-05  Robby Stephenson  <robby@periapsis.org>

	* Fixed image open dialog to remember last location (Bug 376002).
	* Added ESRB rating for "Everyone 10+" (Bug 375995).

2017-01-30  Robby Stephenson  <robby@periapsis.org>

	* Fixed Bibsys z39.50 settings (Bug 375758).
	* Fixed "Report Bug" menu item to link to bugs.kde.org (Bug 375760).
	* Update MARCXML2MODS stylesheet to version 3.6.

2017-01-29  Robby Stephenson  <robby@periapsis.org>

	* Fixed Google Scholar data source.

2017-01-15  Robby Stephenson  <robby@periapsis.org>

	* Fixed bug with Rating drawing size in list view (Bug 372560).

2016-12-19  Robby Stephenson  <robby@periapsis.org>

	* Fixed bug with truncated first two characters of root folder when importing a file listing (Bug 373918).

2016-11-08  Robby Stephenson  <robby@periapsis.org>

	* Released Tellico 3.0.

2016-06-15  Robby Stephenson  <robby@periapsis.org>

	* Added native data source for Bedetheque.com

2016-05-25  Robby Stephenson  <robby@periapsis.org>

	* Improved performance when deleting many entries.

2016-05-03  Robby Stephenson  <robby@periapsis.org>
