@@ -1,11 +1,9 @@
 anidb.net
-rpggeek.com API (same as BGG)
-videogamegeek.com API (same as BGG)
 Douban
  * Implement multiple ISBN search and continued searching (for more than 20 results)
 Add Zotero query
 When adding new default value to a field, offer to insert value ine xisting entries
-Remove FIlmaster?
+Remove Filmaster?
 Make sure all usages of FileRef* deletes the pointer
 
 Use FileRef for template installation to support network install
